src/test/resources/invalid_tests/InvalidRecursion.cnna
architecture InvalidRecursion(img_height=224, img_width=224, img_channels=3, classes=1000){
    def input Z(0:255)^{img_channels, img_height, img_width} image
    def output Q(0:1)^{classes} predictions

    def conv(kernel, channels, stride=1, act=true){
        Convolution(kernel=(kernel,kernel), channels=channels, stride=(stride,stride)) ->
        BatchNorm() ->
        resLayer(channels = 8) ->
        Relu(?=act)
    }
    def skip(channels, stride){
        Convolution(kernel=(1,1), channels=channels, stride=(stride,stride)) ->
        BatchNorm()
    }
    def resLayer(channels, stride=1){
        (
            conv(kernel=3, channels=channels, stride=stride) ->
            conv(kernel=3, channels=channels, stride=stride, act=false)
        |
            skip(channels=channels, stride=stride, ?=(stride!=1))
        ) ->
        Add() ->
        Relu()
    }

    image ->
    conv(kernel=7, channels=64, stride=2) ->
    Pooling(pool_type="max", kernel=(3,3), stride=(2,2)) ->
    resLayer(channels=64, ->=3) ->
    resLayer(channels=128, stride=2) ->
    resLayer(channels=128, ->=3) ->
    resLayer(channels=256, stride=2) ->
    resLayer(channels=256, ->=5) ->
    resLayer(channels=512, stride=2) ->
    resLayer(channels=512, ->=2) ->
    GlobalPooling(pool_type="avg") ->
    FullyConnected(units=classes) ->
    Softmax() ->
    predictions
}
